<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="20dp">

    <ImageView
        android:id="@+id/post_image"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:contentDescription="@string/post_image_description"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/placeholder" />

    <TextView
        android:id="@+id/post_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/TextStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/post_image"
        tools:text="This is a sample post text" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/action_bar"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/post_text">

        <ImageView
            android:id="@+id/like_button"
            style="@style/ActionButton"
            android:contentDescription="@string/like_button_description"
            android:src="@drawable/ic_like_empty"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/comment_button"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/comment_button"
            style="@style/ActionButton"
            android:contentDescription="@string/comment_button_description"
            android:src="@drawable/ic_comment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/share_button"
            app:layout_constraintStart_toEndOf="@id/like_button"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/share_button"
            style="@style/ActionButton"
            android:contentDescription="@string/forward_button_description"
            android:src="@drawable/ic_forward"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/comment_button"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>